--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 /inputs/*
-!/inputs/example/
-!/inputs/prompts/
-!/inputs/prompts/*
-
-/outputs/*
-!/outputs/example/
+!/inputs/example
+!/inputs/example/*
+!/inputs/prompts
+!/inputs/prompts/summarize_file.txt
 
 .DS_Store
